# QuOptim

./: .gitignore  CLAUDE.md  LICENSE  README.md  custom_gui.py  pyproject.toml  run_server.py
.github/workflows/: CI.yml
juliamcp/: Manifest.toml  Project.toml  server.jl
model/eval/: 7bit_params.json  GHZ_Steane.txt
model/plots/10-0.1-final-submission-nopenalty--08-09-2024/: command.txt  hyper-params.json  hyper-params.txt
model/plots/2-0.1-UNNAMED--19-08-2025/: command.txt  hyper-params.json  hyper-params.txt  test-results.txt  train-results.txt
model/plots/3-0.1-final-submission-nopenalty--08-09-2024/: command.txt  hyper-params.json  hyper-params.txt  model.pkl  model_value.pkl  test-results.txt  testbench-results.txt
model/plots/4-0.1-final-submission-nopenalty--08-09-2024/: command.txt  hyper-params.json  hyper-params.txt  model.pkl  model_value.pkl  test-results.txt  testbench-results.txt
model/plots/5-0.1-final-submission-nopenalty--08-09-2024/: command.txt  hyper-params.json  hyper-params.txt  model.pkl  model_value.pkl  test-results.txt  testbench-results.txt  train-results.txt
model/plots/6-0.1-final-submission-nopenalty--08-09-2024/: command.txt  hyper-params.json  hyper-params.txt  (+4 more)
model/tests/: mini.json
src/gate_optimize/: __init__.py  __main__.py  custom_gui.py  server.py  server_old.py  server_qec.py
tests/: README.md  __init__.py  run_tests.py  test_error_scenarios.py  test_manual_mcp.py  test_mcp_server.py  test_mcp_server_simple.py  test_mcp_tools.py  test_qec_codes.py  test_qec_core.py  test_qec_mcp.py  test_svg_generation.py
(+47 files in other folders)
