[project]
name = "gate-optimize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Someone in tsinghua", email = "" }]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "mcp[cli]>=1.12.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "prettytable>=3.16.0",
    "pylatexenc>=2.10",
    "pyqt6>=6.9.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "qiskit>=2.1.1",
    "qiskit-aer>=0.17.1",
    "scipy>=1.16.1",
    "stim>=1.15.0",
    "swanlab>=0.6.8",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]


[project.scripts]
mcp-gate-optimize = "gate_optimize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
